Simplify XpathNodeTracker and document its more obscure corners.  This is a preparation to re-implement it in terms of XPathContext later.
git-svn-id: http://svn.code.sf.net/p/xmlunit/code/trunk/xmlunit@434 458802cb-8328-0410-b1d9-a76001e3bb52